--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,12 +1,3 @@
-/* h1 a, h2 a{
-    color: #FCA205;
-    font-family: 'Lobster';
-}
-
-body {
-    padding-left: 15px;
-} */
-
 .page-header {
     background-color: #C25100;
     margin-top: 0;
@@ -28,7 +19,7 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #bb34bb;
+    color: #817c81;
 }
 
 .save {
@@ -46,10 +37,26 @@ h1, h2, h3, h4 {
     margin-right: 20px;
 }
 
+.top-menu-text, .top-menu-text:hover, .top-menu-text:visited {
+    color: #ffffff;
+    float: right;
+    font-size: 15pt;
+    margin-right: 10px;
+}
+
 .post {
     margin-bottom: 70px;
 }
 
 .post h2 a, .post h2 a:visited {
     color: #000000;
+}
+
+.post .date, .post .btn{
+    float: right;
+    margin-right: 10px;
+}
+
+.comment{
+    margin: 20px 0px 20px 20px;
 }
