--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -13,9 +13,16 @@
     <div class="page-header">
         {% if user.is_authenticated %}
         <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+        <a href="{% url 'post_draft_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+        <p class="top-menu-text">Conectado como {{ user.username }} <small>(<a
+                    href="{% url 'logout' %}">Salir</a>)</small>
+        </p>
+        {% else %}
+        <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
         {% endif %}
         <h1><a href="/">Blog Probando Django</a></h1>
     </div>
+
     <div class="content container">
         <div class="row">
             <div class="col-md-8">
