--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,10 +4,11 @@
 {% for post in posts %}
 <div class="post">
     <div class="date">
-        <p>publicado: {{ post.published_date }} </p>
+        <p>Publicado: {{ post.published_date }} </p>
     </div>
     <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
     <p>{{ post.text|linebreaksbr }}</p>
+    <a href="{% url 'post_detail' pk=post.pk %}">Comentarios: {{ post.approved_comments.count }}</a>
 </div>
 {% endfor %}
-{% endblock %}
+{% endblock content%}
